# ai-runtime-trace

./: .gitignore  EVAL_FRAMEWORK.md  EVOLUTION_ROADMAP.md  agents.md  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
benchmarks/snapshot_pre_evol/: code-reviewer_Memory.md  implementer_Memory.md  implementer_SKILL.md  plan-maker_SKILL.md  spec-writer-v2_Memory.md  spec-writer-v2_SKILL.md  task-breaker_SKILL.md
dashboard/: analysis.js  context.js  diff.js  graph.js  index.html  llm-context.js  pool.css  pool.html  pool.js  sidebar.js
examples/hermes-flow/: README.md  (+1 more)
hermes_flow/: __init__.py  agent_runner.py  agent_session.py  agent_tools.py  alerts.py  benchmark.py  bootstrap.py  cli.py  context.py  debate_cli.py  delegate_spawner.py  engine.py  errors.py  evaluator.py  flow_loader.py  hooks.py  memory.py  observer.py  routing.py  run_paths.py  runtime_loop.py  schemas.py  storage.py  tools.py  trace.py  trace_query.py  worker.py
kv_cache/: __init__.py
kv_cache_system/: README.md
review/: review.md
runtime_trace/: __init__.py  alerts.py  benchmark.py  bootstrap.py  debate_cli.py  engine.py  errors.py  evaluator.py  flow_loader.py  hooks.py  memory.py  observer.py  routing.py  run_paths.py  schemas.py  storage.py  tools.py  trace.py  trace_query.py
scripts/: verify_hermes_flow_contracts.py
(+275 files in other folders)
