[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-flow-fsm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyYAML",
]

[tool.setuptools.packages.find]
include = ["hermes_flow*"]

[tool.pytest.ini_options]
testpaths = ["tests/hermes_flow"]
