[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "runtime-trace-fsm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyYAML",
]

[tool.setuptools.packages.find]
include = ["runtime_trace*"]

[project.scripts]
debate = "runtime_trace.debate_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests/runtime_trace"]
